<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_alias_layout"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <ImageView
            android:id="@+id/create_alias_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/logo_white" />

        <EditText
            android:id="@+id/create_alias_alias_field"
            android:layout_below="@+id/create_alias_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_white_box"
            android:hint="@string/alias_name"
            android:inputType="text"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@."
            android:maxLines="1"
            android:paddingBottom="7dp"
            android:paddingLeft="5dp"
            android:focusableInTouchMode="true"
            android:paddingRight="5dp"
            android:paddingTop="7dp"
            android:focusable="true"
            android:textColor="@color/red"
            android:textColorHint="@color/red"
            android:textStyle="bold"
            android:maxLength="40"
            android:ems="10"/>

        <EditText
            android:id="@+id/create_alias_referral_code_field"
            android:layout_below="@+id/create_alias_alias_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_white_box"
            android:hint="@string/referal_code"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@."
            android:maxLines="1"
            android:paddingBottom="7dp"
            android:paddingLeft="5dp"
            android:focusableInTouchMode="true"
            android:paddingRight="5dp"
            android:paddingTop="7dp"
            android:focusable="true"
            android:textColor="@color/red"
            android:textColorHint="@color/red"
            android:textStyle="bold"
            android:maxLength="40"
            android:ems="10"/>

        <Button
            android:id="@+id/create_alias_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:layout_below="@+id/create_alias_referral_code_field"
            android:layout_marginTop="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/red"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/register"/>

        <!--<LinearLayout-->
            <!--android:id="@+id/ln_subscribe"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="right"-->
            <!--android:layout_marginRight="32dp"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:background="@drawable/round_white_box"-->
            <!--android:orientation="vertical" >-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="15dp"-->
                <!--android:text="@string/subscribe"-->
                <!--android:textColor="@color/red"-->
                <!--android:textSize="20sp"-->
                <!--android:textStyle="bold" >-->
            <!--</TextView>-->
        <!--</LinearLayout>-->

    </RelativeLayout>
</ScrollView>